welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = 
{
	if ((a==b && !(a==c)) || (a==c && !(b==c)) || (b==c && !(a==c)))
	{
		return 10
		if (a==b==c)
	{
		return 20
	} 
	
	} else {
		return 0
	}
}
